[gd_scene load_steps=12 format=2]

[ext_resource path="res://theme/lineedit_normal.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/font/rajdhani.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/font/ethnocentric rg.tres" type="DynamicFontData" id=3]
[ext_resource path="res://assets/font/font.tres" type="DynamicFont" id=4]
[ext_resource path="res://status_bar/StatusBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://menu/Background2D/2DBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://theme/blue_button_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://theme/blue_button.tres" type="StyleBox" id=8]
[ext_resource path="res://wallet/WalletInfo.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="WalletInfo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 9 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 6 )]

[node name="Vbox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -700.0
margin_top = -500.0
margin_right = 700.0
margin_bottom = 500.0
rect_min_size = Vector2( 1400, 1000 )
rect_pivot_offset = Vector2( -2069, -381 )
mouse_filter = 2
custom_constants/separation = 175
alignment = 1

[node name="Label" type="Label" parent="Vbox"]
margin_top = 122.0
margin_right = 1400.0
margin_bottom = 272.0
rect_min_size = Vector2( 600, 150 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Wallet information"
align = 1
valign = 1

[node name="PasswordContainer" type="CenterContainer" parent="Vbox"]
margin_top = 447.0
margin_right = 1400.0
margin_bottom = 553.0

[node name="VBoxContainer" type="VBoxContainer" parent="Vbox/PasswordContainer"]
margin_left = 350.0
margin_right = 1050.0
margin_bottom = 106.0
rect_min_size = Vector2( 700, 100 )
mouse_filter = 2

[node name="Label" type="Label" parent="Vbox/PasswordContainer/VBoxContainer"]
margin_right = 700.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Password"
align = 1

[node name="Password" type="LineEdit" parent="Vbox/PasswordContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 700.0
margin_bottom = 106.0
rect_min_size = Vector2( 600, 50 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 1 )
align = 1
secret = true
context_menu_enabled = false

[node name="MnemonicContainer" type="CenterContainer" parent="Vbox"]
visible = false
margin_top = 700.0
margin_right = 1400.0
margin_bottom = 1000.0
mouse_filter = 2

[node name="Mnemonic" type="Label" parent="Vbox/MnemonicContainer"]
margin_left = 200.0
margin_right = 1200.0
margin_bottom = 300.0
rect_min_size = Vector2( 1000, 300 )
custom_colors/font_color = Color( 0, 0.576471, 1, 1 )
custom_constants/line_spacing = 10
custom_fonts/font = ExtResource( 4 )
text = "Mnemonic goes here"
align = 1
valign = 1
autowrap = true

[node name="CenterContainer" type="HBoxContainer" parent="Vbox"]
margin_top = 728.0
margin_right = 1400.0
margin_bottom = 878.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_constants/separation = 140
alignment = 1

[node name="Confirm" type="Button" parent="Vbox/CenterContainer"]
margin_left = 230.0
margin_right = 630.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Confirm"

[node name="Copy" type="Button" parent="Vbox/CenterContainer"]
visible = false
margin_left = 550.0
margin_right = 850.0
margin_bottom = 100.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Copy"

[node name="Back" type="Button" parent="Vbox/CenterContainer"]
margin_left = 770.0
margin_right = 1170.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
mouse_default_cursor_shape = 2
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 8 )
text = "Back"

[node name="StatusBar" parent="." instance=ExtResource( 5 )]

[node name="CopiedLabel" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -25.0
margin_right = 200.0
margin_bottom = 25.0
rect_min_size = Vector2( 275, 50 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Copied!"
align = 2

[connection signal="text_entered" from="Vbox/PasswordContainer/VBoxContainer/Password" to="." method="_on_Password_text_entered"]
[connection signal="pressed" from="Vbox/CenterContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="pressed" from="Vbox/CenterContainer/Copy" to="." method="_on_Copy_pressed"]
[connection signal="pressed" from="Vbox/CenterContainer/Back" to="." method="_on_Back_pressed"]
